--- a/app/views/ecommerce/vendor_confirmations/_order_details.haml
+++ b/app/views/ecommerce/vendor_confirmations/_order_details.haml
@@ -44,7 +44,7 @@
       = @customer_order.note_to
       %br
       %strong Content:
-      %p.sg-box__content
+      %p.sg-box__content{style: 'white-space: pre; text-align: left;'}
         = @customer_order.note_content
 
   .col-xs-6
