--- a/app/views/ecommerce/checkout/edit_review.haml
+++ b/app/views/ecommerce/checkout/edit_review.haml
@@ -7,9 +7,10 @@
         .row
           .col-xs-12.col-md-8
             .outline-container.form-group
-              - @customer_order.purchase_orders.each do |po|
+              - @customer_order.line_items.each do |line_item|
+                - gift = line_item.orderable
                 .outline-container__section
-                  = render 'edit_review_gift', po: po
+                  = render 'edit_review_gift', gift: gift
               .outline-container__section
                 = render 'edit_review_detail_items'
           .col-xs-12.col-md-4
