--- a/app/views/vendor_mailer/acknowledge_order_request.text.erb
+++ b/app/views/vendor_mailer/acknowledge_order_request.text.erb
@@ -4,10 +4,8 @@ An order has come through on wrapt.com. Please follow this link:
 
 <%= ecommerce_vendor_confirmation_url(@purchase_order.vendor_token) %>
 
-to tell us if you can or cannot fulfill this order. After all other vendors and
-purchase orders associated with this customer's entire order are verified, you
-will receive the information to complete fulfillment such as shipping labels, a
-packling slip, etc.
+to tell us if you can or cannot fulfill this order. Shipping information can be
+found there, too.
 
 <% @purchase_order.line_items.each do |line_item| %>
   <% product = line_item.orderable %>
