add arrow-down to svg

--- a/app/assets/stylesheets/modules/_icons.scss
+++ b/app/assets/stylesheets/modules/_icons.scss
@@ -130,3 +130,9 @@ svg.recommendation__icon-liked path {
 .icon-page {
   color: $blue-002;
 }
+.icon-arrow-down {
+  fill: $blue-002;
+  width: 14px;
+  height: 7px;
+  display: inline-block;
+}
