--- a/app/views/my_account/_sub_nav.haml
+++ b/app/views/my_account/_sub_nav.haml
@@ -1,9 +1,13 @@
-- links = [['giftees', my_account_giftees_path], ['profile', my_account_profile_path], ['orders', my_account_orders_path], ['billing', my_account_billing_index_path], ['preferences', my_account_preferences_path]]
+-# [link_text, link_path, link_controller]
+- links = [['giftees', my_account_giftees_path, 'giftees'], ['profile', my_account_profile_path, 'profiles'], ['orders', my_account_orders_path, 'orders'], ['billing', my_account_billing_index_path, 'billing'], ['preferences', my_account_preferences_path, 'preferences']]
 .container.ma-container
   %h2.light My Account
-  .ma-subnav
+  = link_to '#ma-collapse', data: {toggle: 'collapse'}, class: 'ma-subnav-mobile-trigger', 'aria-controls' => 'ma-collapse', 'aria-expanded' => false do
+    = links.select{|link| link[2] == controller_name}.first[0]
+  .ma-subnav.collapse#ma-collapse
     .ma-subnav__row
       - links.each do |link|
-        .ma-subnav__link
+        .ma-subnav__link{class: controller_name == link[2] ? 'active' : ''}
           = link_to link[0], link[1]
+
 
