--- a/app/assets/stylesheets/modules/_containers.scss
+++ b/app/assets/stylesheets/modules/_containers.scss
@@ -1,11 +1,16 @@
 @import "helpers";
 
 .outline-container {
-  border: 2px solid $gray-004;
+  border: 1px solid $gray-004;
+  background-color: #FFFFFF;
 }
 
 .outline-container__blue {
   background-color: $blue-010;
+}
+
+.outline-container__light-fade {
+  background-color: #FDFDFD;
 }
 
 .outline-container__split {
@@ -24,4 +29,12 @@
 
 .outline-container__section:not(:last-child) {
   border-bottom: 1px solid $gray-004;
+}
+
+.outline-container__header {
+  padding: 8px 16px;
+  text-transform: uppercase;
+  @include akkurat-light;
+  letter-spacing: 1px;
+  background-color: $gray-001;
 }
