--- a/app/assets/stylesheets/modules/_my_account.scss
+++ b/app/assets/stylesheets/modules/_my_account.scss
@@ -14,6 +14,16 @@
     line-height: 25px;
     margin-bottom: 0px;
     padding-right: 20px;
+    a {
+      color: $gray-008;
+    }
+  }
+  svg {
+    width: 10px;
+    height: 10px;
+    fill: $gray-008;
+    stroke: $gray-008;
+    color: $gray-008;
   }
 }
 
