--- a/app/views/gift_selections/_index.haml
+++ b/app/views/gift_selections/_index.haml
@@ -8,7 +8,11 @@
     .gift-basket__gift.clearfix
       .gift-basket__gift__left
         .gift-basket__gift-image
-          = image_tag gift.primary_gift_image_with_fallback.image_url(:small)
+          - url = gift.primary_gift_image_with_fallback.image&.url(:small)
+          - if url.present?
+            = image_tag url
+          - else
+            %img
       .gift-basket__gift__right
         .gift-basket__gift-title.small
           = gift.title
