--- a/app/views/ecommerce/vendor_confirmations/_order_details.haml
+++ b/app/views/ecommerce/vendor_confirmations/_order_details.haml
@@ -18,7 +18,11 @@
           - product = line_item.orderable
           %tr
             %td
-              %img{src: product.primary_product_image.image.url(:small), style: 'max-width: 88px; padding-right: 4px;'}
+              - url = product.primary_product_image&.image&.url(:small)
+              - if url.present?
+                = image_tag url, class: 'img-responsive', style: 'max-width: 88px; padding-right: 4px;'
+              - else
+                %img
             %td= product.description
             %td= product.vendor_sku
             %td= line_item.quantity
