--- a/app/assets/stylesheets/modules/_typography.scss
+++ b/app/assets/stylesheets/modules/_typography.scss
@@ -57,6 +57,9 @@ p {
   margin-bottom: 16px;
   line-height: 1.666666667;
 }
+.uppercase {
+  text-transform: uppercase;
+}
 .lead {
   font-size: rem(20);
   line-height: 1.6;
