--- a/app/views/my_account/profiles/edit.haml
+++ b/app/views/my_account/profiles/edit.haml
@@ -1,20 +1,17 @@
 .container
-  .row
-    .col-sm-12
-      %h1 My Account
-
-      %h2
-        General Information
-        = link_to 'Cancel', my_account_profile_path, class: 'btn btn-sm btn-default'
-
+  = render 'header'
   .row
     .col-sm-12
       = simple_form_for current_user, url: my_account_profile_path do |form|
-        .form-inputs
-          = form.input :first_name
-          = form.input :last_name
-          = form.input :email, label: 'Email Address'
-          = form.input :password
+        .row
+          .col-xs-12.col-md-6
+            = form.input :first_name, label: 'First Name'
+          .col-xs-12.col-md-6
+            = form.input :last_name, label: 'Last Name'
+        .row
+          .col-xs-12.col-md-6
+            = form.input :email, label: 'Email Address'
+          .col-xs-12.col-md-6
+            = form.input :password
 
-        .form-actions
-          = form.submit 'Update', class: 'btn btn-primary'
+        = form.submit 'Update', class: 'btn btn-primary btn-block uppercase'
