--- a/app/assets/stylesheets/helpers/_mixins.scss
+++ b/app/assets/stylesheets/helpers/_mixins.scss
@@ -33,6 +33,11 @@
   transition: all 0.3s ease;
 }
 
+@mixin shadowed-box__gray-small {
+  box-shadow: 1px 2px 32px rgba(161,172,178, 0.2), 1px 2px 8px rgba(161,172,178, 0.1);
+  transition: all 0.3s ease;
+}
+
 
 @mixin akkurat-regular {
   font-family: "Akkurat-Regular", sans-serif;
