--- a/app/views/my_account/giftees/edit.haml
+++ b/app/views/my_account/giftees/edit.haml
@@ -1,11 +1,22 @@
+%h5 Edit Giftee
 = simple_form_for @giftee, url: my_account_giftee_path(@giftee), html: { data: { 'submits-to-pjax-modal' => true }} do |f|
-  = f.input :name
-  = f.input :email
-  = f.simple_fields_for :address do |af|
-    = af.input :id, as: :hidden
-    = af.input :street1
-    = af.input :city
-    = af.input :state
-    = af.input :zip
-  = f.submit
-  =link_to 'Cancel Changes'
+  .row
+    .col-xs-12.col-sm-6
+      = f.input :name
+    .col-xs-12.col-sm-6
+      = f.input :email
+  .row
+    .col-xs-12
+      = f.simple_fields_for :address do |af|
+        = af.input :id, as: :hidden
+        = af.input :street1
+        .row
+          .col-xs-12.col-sm-6
+            = af.input :city
+          .col-xs-5.col-sm-2
+            = af.input :state
+          .col-xs-7.col-sm-4
+            = af.input :zip
+  = f.submit 'SAVE CHANGES', class: 'btn btn-block btn-primary'
+  .text-center.mt2
+    =link_to 'Cancel Changes', '#', data: {pjax_modal_close: true}
