--- a/app/views/my_account/giftees/index.haml
+++ b/app/views/my_account/giftees/index.haml
@@ -1,28 +1,39 @@
 .container
+  = render 'header'
   .row
     = paginate(@giftees)
     - @giftees.each do |giftee|
-      .col-xs-6
-        = giftee.name
-        %br
-        = giftee.relationship
-        %br
-        = link_to edit_my_account_giftee_path(giftee), data: {loads_in_pjax_modal: true} do
-          Edit
-        %br
-        Mailing Address
-        = format_address(object: giftee.address)
-        %br
-        = giftee.email
-        %br
-        Gifts Sent
-        = giftee.gifts_sent
+      .col-xs-12.col-md-6
+        = render 'giftee', giftee: giftee
+    .col-xs-12.visible-xs
+      = link_to 'New Giftee', 'javascript:alert("TODO");', class: 'btn btn-sm btn-primary uppercase btn-block'
+= content_tag :page_js do
+  :javascript
+    $(document).ready(function() {
+      App.WraptStyledTabs('.wrapt-styled-tabs-1', '.wrapt-styled-tabs-1__tab');
+    })
+-#
+  .col-xs-6
+    = giftee.name
+    %br
+    = giftee.relationship
+    %br
+    = link_to edit_my_account_giftee_path(giftee), data: {loads_in_pjax_modal: true} do
+      Edit
+    %br
+    Mailing Address
+    = format_address(object: giftee.address)
+    %br
+    = giftee.email
+    %br
+    Gifts Sent
+    = giftee.gifts_sent
 
-        - if giftee.finished_surveys?
-          = link_to giftee_gift_recommendations_path(giftee) do
-            VIEW #{giftee.gift_recommendations.count} RECOMMENDATIONS
-        - else
-          :ruby
-            question_response = giftee.first_unanswered_response
-          = link_to giftee_survey_question_path(giftee_id: giftee.id, survey_id: question_response.survey_response_id, id: question_response.to_param) do
-            COMPLETE THE QUIZ
+    - if giftee.finished_surveys?
+      = link_to giftee_gift_recommendations_path(giftee) do
+        VIEW #{giftee.gift_recommendations.count} RECOMMENDATIONS
+    - else
+      :ruby
+        question_response = giftee.first_unanswered_response
+      = link_to giftee_survey_question_path(giftee_id: giftee.id, survey_id: question_response.survey_response_id, id: question_response.to_param) do
+        COMPLETE THE QUIZ
