--- a/app/views/my_account/profiles/_header.haml
+++ b/app/views/my_account/profiles/_header.haml
@@ -1,9 +1,6 @@
-.row
-  .col-xs-12
-    .ma-title.clearfix
-      .ma-title__text.pull-left
-        %h5 General Information
-      .ma-title__action.pull-right
-        - href = action_name == 'show' ? edit_my_account_profile_path : my_account_profile_path
-        - text = action_name == 'show' ? 'Edit' : 'Cancel'
-        = link_to text, href, class: 'btn btn-xs btn-default'
+- href = action_name == 'show' ? edit_my_account_profile_path : my_account_profile_path
+- text = action_name == 'show' ? 'Edit' : 'Cancel'
+- title_action = capture_haml do 
+  = link_to text, href, class: 'btn btn-xs btn-default btn-upcase-gray'
+
+= render 'my_account/page_header', title: 'General Information', title_action: title_action, page_header_action: nil
