--- a/app/assets/stylesheets/helpers/_mixins.scss
+++ b/app/assets/stylesheets/helpers/_mixins.scss
@@ -34,7 +34,7 @@
 }
 
 @mixin shadowed-box__gray-small {
-  box-shadow: 1px 2px 32px rgba(161,172,178, 0.2), 1px 2px 8px rgba(161,172,178, 0.1);
+  box-shadow: 1px 3px 22px rgba(240,240,240,0.8), 1px 2px 2px rgba(240,240,240,0.9);
   transition: all 0.3s ease;
 }
 
