--- a/app/views/my_account/giftees/edit.haml
+++ b/app/views/my_account/giftees/edit.haml
@@ -1,15 +1,16 @@
 %h5 Edit Giftee
 = simple_form_for @giftee, url: my_account_giftee_path(@giftee), html: { data: { 'submits-to-pjax-modal' => true }} do |f|
   .row
-    .col-xs-12.col-sm-6
+    .col-xs-12
       = f.input :name
-    .col-xs-12.col-sm-6
-      = f.input :email
+  .row
+    .col-xs-12
+      = f.input :email, label: 'Email Address'
   .row
     .col-xs-12
       = f.simple_fields_for :address do |af|
         = af.input :id, as: :hidden
-        = af.input :street1
+        = af.input :street1, label: 'Street Address'
         .row
           .col-xs-12.col-sm-6
             = af.input :city
